--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Android_teamManiacs_project</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="main_tab_home_title">Home</string>
+    <string name="main_tab_search_title">Search</string>
+    <string name="main_tab_my_videos_title">My Videos</string>
 </resources>
