--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Android_teamManiacs_project</string>
     <string name="video_item_title_demo">임시 텍스트임시 텍스트임시 텍스트임시 텍스트임시 텍스트임시 텍스트임시 텍스트임시 텍스트</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="my_video_fragment_title_text">MyPage</string>
+    <string name="my_video_fragment_profile_name_demo">프로필 이름</string>
+    <string name="my_video_fragment_favorite_title_text">My Favorite Video</string>
 </resources>
