--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,16 @@
     <string name="main_tab_search_title">Search</string>
     <string name="main_tab_my_videos_title">My Videos</string>
     <string name="video_item_title_demo">임시 텍스트임시 텍스트임시 텍스트임시 텍스트임시 텍스트임시 텍스트임시 텍스트임시 텍스트</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
+    <string name="app_widget_description">This is an app widget description</string>
+
+    <string-array name="categories">
+        <item>Film &amp; Animation</item>
+        <item>Test</item>
+        <item>Swift</item>
+        <item>Python</item>
+        <item>Scala</item>
+        <item>Perl</item>
+    </string-array>
 </resources>
