[FEAT] : ⚙️ edit dialog 구현
- 다이얼로그로 닉네임변경
- 갤러리에서 프로필사진 변경하도록  구현
- 닉네임 입력안했을시, 예외처리 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="main_tab_my_videos_title">My Videos</string>
 
     <string name="video_item_title_demo">임시 텍스트임시 텍스트임시 텍스트임시 텍스트임시 텍스트임시 텍스트임시 텍스트임시 텍스트</string>
+    <string name="dialog_save">확인</string>
+    <string name="dialog_cancle">취소</string>
 
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
